--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,9 +10,11 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="icon" href="https://github.com/pranjals149/acevent/blob/master/One%20To.jpg?raw=true"
+    type="image/x-icon" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-  <title>React App</title>
+  <title>One to DOC</title>
 </head>
 
 <body>
